# pico_read_usb_keyboard

./: CMakeLists.txt  README.md  main.c  tusb_config.h
